--- a/change/deltas/DE-003-cli-integration-for-frontmatter-schema-show-commands/DE-003.md
+++ b/change/deltas/DE-003-cli-integration-for-frontmatter-schema-show-commands/DE-003.md
@@ -9,7 +9,7 @@ kind: delta
 aliases: []
 relations:
   - type: implements
-    target: PROD-004
+    target: PROD-004.FR-004
 context_inputs:
   - type: decision
     id: FRONTMATTER_MIGRATION_COMPLETE
