chore: update changes

--- a/change/deltas/DE-002-python-package-level-spec-granularity/DE-002.md
+++ b/change/deltas/DE-002-python-package-level-spec-granularity/DE-002.md
@@ -4,7 +4,7 @@ slug: python-package-level-spec-granularity
 name: Delta - Python package-level spec granularity
 created: '2025-11-02'
 updated: '2025-11-02'
-status: draft
+status: completed
 kind: delta
 aliases: []
 relations:
