--- a/change/deltas/DE-003-cli-integration-for-frontmatter-schema-show-commands/DE-003.md
+++ b/change/deltas/DE-003-cli-integration-for-frontmatter-schema-show-commands/DE-003.md
@@ -4,7 +4,7 @@ slug: cli-integration-for-frontmatter-schema-show-commands
 name: Delta - CLI Integration for Frontmatter Schema Show Commands
 created: '2025-11-02'
 updated: '2025-11-02'
-status: draft
+status: completed
 kind: delta
 aliases: []
 relations:
@@ -56,7 +56,7 @@ requirements:
   updates: []
   verifies: []
 phases:
-  - phase-01
+  - id: IP-003.PHASE-01
 ```
 
 ## 1. Summary & Context
