--- a/change/deltas/DE-004-phase-management-implementation/DE-004.md
+++ b/change/deltas/DE-004-phase-management-implementation/DE-004.md
@@ -38,7 +38,10 @@ requirements:
     - PROD-006.NF-002
   updates: []
   verifies: []
-phases: []
+phases:
+  - id: IP-004.PHASE-01
+  - id: IP-004.PHASE-02
+  - id: IP-004.PHASE-03
 ```
 
 ## 1. Summary & Context
