--- a/change/deltas/DE-005-implement-spec-backfill/DE-005.md
+++ b/change/deltas/DE-005-implement-spec-backfill/DE-005.md
@@ -9,8 +9,15 @@ kind: delta
 aliases: []
 relations: []
 applies_to:
-  specs: []
-  requirements: []
+  specs:
+  - PROD-007
+  requirements:
+  - PROD-007.FR-001
+  - PROD-007.FR-002
+  - PROD-007.FR-003
+  - PROD-007.FR-004
+  - PROD-007.NF-001
+  - PROD-007.NF-002
 ---
 
 # DE-005 – implement spec backfill
@@ -34,12 +41,12 @@ requirements:
     - PROD-007.FR-002
     - PROD-007.FR-003
     - PROD-007.FR-004
-    - PROD-007.FR-005
-    - PROD-007.FR-006
+    - PROD-007.NF-001
+    - PROD-007.NF-002
   updates: []
   verifies: []
 phases:
-  - phase-01
+  - id: IP-005.PHASE-01
 ```
 
 ## 1. Summary & Context
@@ -152,21 +159,20 @@ Key pain points addressed:
 
 **Future Phases / Deltas**:
 - Phase 2: Sub-agent delegation for parallel batch processing (performance optimization)
-- Future: Support for non-Python languages (Go, TypeScript)
+- Future: Support for non-Python languages (Go, TypeScript) -- TBD is this language agnostic or dependent?
 - Future: Relationship inference beyond contracts (semantic analysis)
 
 **Backlog Items**:
 - Create tech spec defining implementation details (CLI API, detection algorithms, etc.)
 - Design stub detection algorithm with edge case handling
-- Create `.claude/commands/supekku.backfill.md` agent command
-- Add `show template` command to `supekku/cli/show.py`
+- Create `.claude/commands/supekku.backfill.md` agent command 
 - Implement `supekku/cli/backfill.py` module
-- Implement `supekku/scripts/lib/specs/completion.py` logic
+- ensure tech specs auto-created with status 'stub'
+
 
 **Open Decisions / Questions**:
 - **Q1**: Batch mode default: interactive or automated? **Leaning**: Interactive (safer)
 - **Q2**: Handle incomplete contracts: skip spec or partial completion? **Leaning**: Partial + mark for review
-- **Q3**: CLI command naming: `backfill` vs `complete` vs `fill`? **Decided**: `backfill`
 
 ## 9. Implementation Notes
 
@@ -185,7 +191,7 @@ uv run spec-driver backfill batch "SPEC-*"  # Batch mode
 ```
 
 **Key Design Decisions**:
-1. **Stub detection**: Exact string match of content after frontmatter vs. rendered template
+1. **Stub detection**: status = 'stub' && lines < 30
 2. **Contracts location**: `specify/{kind}/{spec-id}/contracts/*.md`
 3. **Progress reporting**: Print to stdout in real-time (not just at end)
 4. **Error handling**: Isolate per-spec errors; continue batch on failure
