--- a/change/deltas/DE-004-phase-management-implementation/DE-004.md
+++ b/change/deltas/DE-004-phase-management-implementation/DE-004.md
@@ -42,12 +42,13 @@ phases:
   - id: IP-004.PHASE-01
   - id: IP-004.PHASE-02
   - id: IP-004.PHASE-03
+  - id: IP-004.PHASE-04
 ```
 
 ## 1. Summary & Context
 - **Product Spec(s)**: PROD-006 – Phase Management (create phase command, enhanced delta display, metadata validation)
 - **Technical Spec(s)**: SPEC-003 (CLI create), SPEC-006 (CLI show), SPEC-054 (change formatters) will be updated
-- **Implementation Plan**: [IP-004](./IP-004.md) – draft, 3 phases planned
+- **Implementation Plan**: [IP-004](./IP-004.md) – draft, 4 phases planned (Phase 04 added 2025-11-03 for plan metadata auto-update)
 - **Change Drivers**: Manual phase creation is error-prone and time-consuming; need tooling to reduce toil
 
 ## 2. Motivation
@@ -64,6 +65,7 @@ phases:
   - Phase metadata validated during sync (PROD-006.FR-005)
   - Phase creation time reduced from 5min to <30sec (PROD-006.NF-001)
   - All 7 verification artifacts passing (VT-PHASE-001 through VT-PHASE-005, VA-PHASE-001, VA-PHASE-002)
+  - **[Added 2025-11-03]** Automatic plan frontmatter updates when creating phases (ensures `show delta --json` consistency)
 - **Operational Constraints**: Solo developer, no breaking changes to existing phase files, maintain skinny CLI pattern
 - **Dependencies**: None - self-contained change
 
@@ -71,9 +73,9 @@ phases:
 - Phase status tracking (planned → in-progress → complete)
 - `list phases` or `show phase` commands
 - Gate validation (entrance/exit criteria checking)
-- Automatic plan frontmatter updates when creating phases
 - Phase templates by type
 - Phase deletion or reordering
+- Automatic delta frontmatter updates (delta.relationships block phase list)
 
 ## 5. Approach Overview
 - **System Touchpoints**:
@@ -125,7 +127,7 @@ phases:
 - **Future Phases / Deltas**: Phase status tracking, gate validation, list/show commands (separate delta when needed)
 - **Backlog Items**: None identified yet
 - **Open Decisions / Questions**:
-  - Should phase creation update plan frontmatter automatically? (Decision: No for MVP, manual sync acceptable)
+  - Should phase creation update plan frontmatter automatically? ~~(Decision: No for MVP, manual sync acceptable)~~ **[Updated 2025-11-03]** Yes - moved to Phase 04 scope to ensure JSON output consistency
   - Phase numbering gaps: error or warning? (Decision: Warning, allow flexibility)
 
 ## 9. Implementation Notes
