--- a/change/deltas/DE-004-phase-management-implementation/IP-004.md
+++ b/change/deltas/DE-004-phase-management-implementation/IP-004.md
@@ -72,6 +72,20 @@ phases:
       - VA-PHASE-002 (UX review) complete
       - All tests + linters passing
       - Documentation updated
+
+  - id: IP-004.PHASE-04
+    name: Phase 04 - Plan Metadata Auto-Update
+    objective: >-
+      Implement automatic plan frontmatter updates when creating phases,
+      ensuring `show delta --json` reflects newly created phases immediately.
+    entrance_criteria:
+      - Phase 01 complete
+      - Understanding of plan.overview block structure
+    exit_criteria:
+      - create_phase() updates plan.overview phases array
+      - VT-PHASE-006 passing (plan metadata update tests)
+      - Manual test - create phase updates JSON output
+      - All tests + linters passing
 ```
 
 ```yaml supekku:verification.coverage@v1
@@ -114,6 +128,13 @@ entries:
     status: planned
     notes: Schema validation tests for phase.overview blocks
 
+  - artefact: VT-PHASE-006
+    kind: VT
+    requirement: PROD-006.FR-004
+    phase: IP-004.PHASE-04
+    status: planned
+    notes: Tests for automatic plan frontmatter update when creating phases
+
   - artefact: VA-PHASE-001
     kind: VA
     requirement: PROD-006.NF-001
@@ -132,8 +153,8 @@ entries:
 ## 1. Summary
 - **Delta**: DE-004 - Phase Management Implementation
 - **Specs Impacted**: PROD-006 (primary), SPEC-003, SPEC-006, SPEC-054 (updates)
-- **Problems / Issues**: Manual phase creation error-prone, no visibility, no validation
-- **Desired Outcome**: `create phase` command working, enhanced delta display, schema validation active
+- **Problems / Issues**: Manual phase creation error-prone, no visibility, no validation, plan metadata not auto-updated
+- **Desired Outcome**: `create phase` command working, enhanced delta display, schema validation active, plan frontmatter automatically updated
 
 ## 2. Context & Constraints
 - **Current Behaviour**: Manual phase creation from template, no tooling support, no display in show delta
@@ -153,6 +174,7 @@ entries:
 | Phase 01 - Create Phase Command | Implement creation logic with auto-numbering | DE-004 approved, PROD-006 reviewed | create_phase() working, VT-001/002/004 passing | `phases/phase-01.md` |
 | Phase 02 - Display & Validation | Enhanced formatter + schema validation | Phase 01 complete | show delta displays phases, VT-003/005 passing | `phases/phase-02.md` |
 | Phase 03 - Verification & Polish | Complete VA artifacts, quality gates | Phase 02 complete | All tests pass, docs updated | `phases/phase-03.md` |
+| Phase 04 - Plan Metadata Auto-Update | Auto-update plan frontmatter on phase creation | Phase 01 complete, plan.overview structure understood | Plan metadata updated, VT-006 passing, JSON output consistent | `phases/phase-04.md` |
 
 ## 5. Phase Detail Snapshot
 - **Research Notes**: `DE-004/notes.md` - Track design decisions and discoveries
