--- a/change/deltas/DE-008-add-coverage-evidence/DE-008.md
+++ b/change/deltas/DE-008-add-coverage-evidence/DE-008.md
@@ -4,7 +4,7 @@ slug: add-coverage-evidence
 name: Separate coverage evidence from audit verification
 created: '2025-11-03'
 updated: '2025-11-03'
-status: draft
+status: completed
 kind: delta
 aliases: []
 relations:
