--- a/change/deltas/DE-010-policy-and-standard-management/DE-010.md
+++ b/change/deltas/DE-010-policy-and-standard-management/DE-010.md
@@ -4,7 +4,7 @@ slug: policy-and-standard-management
 name: Delta - Policy and Standard Management
 created: '2025-11-03'
 updated: '2025-11-03'
-status: draft
+status: in-progress
 kind: delta
 aliases: []
 relations: []
@@ -51,7 +51,10 @@ requirements:
     - PROD-003.NF-002
   updates: []
   verifies: []
-phases: []
+phases:
+  - IP-010.PHASE-01
+  - IP-010.PHASE-02
+  - IP-010.PHASE-03
 ```
 
 ## 1. Summary & Context
