--- a/change/deltas/DE-010-policy-and-standard-management/IP-010.md
+++ b/change/deltas/DE-010-policy-and-standard-management/IP-010.md
@@ -42,6 +42,7 @@ phases:
 - id: IP-010.PHASE-02
 - id: IP-010.PHASE-03
 - id: IP-010.PHASE-04
+- id: IP-010.PHASE-05
 ```
 
 ```yaml supekku:verification.coverage@v1
