--- a/change/deltas/DE-010-policy-and-standard-management/DE-010.md
+++ b/change/deltas/DE-010-policy-and-standard-management/DE-010.md
@@ -4,7 +4,7 @@ slug: policy-and-standard-management
 name: Delta - Policy and Standard Management
 created: '2025-11-03'
 updated: '2025-11-03'
-status: in-progress
+status: completed
 kind: delta
 aliases: []
 relations: []
