chore(DE-013) complete delta

--- a/change/deltas/DE-013-add-design-artefacts-to-delta-package/DE-013.md
+++ b/change/deltas/DE-013-add-design-artefacts-to-delta-package/DE-013.md
@@ -4,7 +4,7 @@ slug: add-design-artefacts-to-delta-package
 name: Delta - add design artefacts to delta package
 created: '2025-11-04'
 updated: '2025-11-04'
-status: draft
+status: completed
 kind: delta
 aliases: []
 relations: []
