spec/changes: WIP

--- a/change/deltas/DE-013-add-design-artefacts-to-delta-package/DE-013.md
+++ b/change/deltas/DE-013-add-design-artefacts-to-delta-package/DE-013.md
@@ -9,8 +9,11 @@ kind: delta
 aliases: []
 relations: []
 applies_to:
-  specs: []
-  requirements: []
+  specs:
+    - SPEC-116
+    - SPEC-110
+  requirements:
+    - PROD-002.FR-006
 ---
 
 # DE-013 – add design artefacts to delta package
@@ -23,10 +26,13 @@ revision_links:
   introduces: []
   supersedes: []
 specs:
-  primary: []
+  primary:
+    - SPEC-116
+    - SPEC-110
   collaborators: []
 requirements:
-  implements: []
+  implements:
+    - PROD-002.FR-006
   updates: []
   verifies: []
 phases: []
